src/components/Header/Header.scss
@import "../../styles/variables";
@import "../../styles/mixins";

.header {
  background-color: $white-color;
  position: fixed;
  top: 0;
  transition: all 150ms ease-out;
  width: 100%;
  z-index: 9991;

  &--is-scrolled {
    @include lightShadow;
  }

  &__container {
    @include container;
    align-items: center;
    background-color: $white-color;
    display: flex;
    padding: 15px 10px;
    transition: all 150ms linear;
    transition: padding 300ms $animation-2;

    @media screen and (min-width: 375px) {
      padding: 15px 10px;
    }

    @media screen and (min-width: 425px) {
      padding: 15px 15px;
    }

    @media screen and (min-width: 768px) {
      padding: 15px 30px;
    }
  }

  &__logo {
    align-items: center;
    display: flex;
    justify-content: space-between;
    height: 24px;
    padding: 5px;
    position: relative;
    transition: all 200ms ease-in;

    &--is-scrolled {
      transition: all 220ms ease-out;
    }
  }

  &__nav {
    display: flex;
    width: 100%;
  }

  &__list {
    display: flex;
  }

  &__item {
    button,
    a {
      color: $black-color;
      background-color: transparent;
      display: flex;
      font-size: 16px;
      font-family: $font-spoof-trail;
      font-weight: 500;
      line-height: 28px;
      margin: 0 23px;
      padding: 12px 0;
      transition: all 180ms ease-out;
      white-space: nowrap;

      &:hover {
        color: $blue-color;

        path {
          fill: $blue-color;
        }
      }

      &--is-scrolled {
        padding: 19px 0;
      }

      path {
        transition: all 180ms ease-out;
      }
    }

    button span {
      align-items: center;
      display: flex;
      justify-content: center;
      transform-origin: center center;
      transition: all 120ms ease-out;
    }

    &--active button span {
      transform: rotate(180deg);
    }
  }

  &__buttons {
    &-list {
      align-items: center;
      display: flex;
      gap: 8px;
    }

    &-link {
      @include thinShadow;
      color: $black-color;
      background-color: $white-color;
      border-radius: 90px;
      font-family: $font-spoof-trail;
      font-size: 16px;
      font-weight: 500;
      height: 52px;
      line-height: 28px;
      padding: 12px 24px;
      transition: all 120ms ease-in-out;
      white-space: nowrap;

      &:hover {
        background-color: $black-color;
        color: $white-color;
        transform: scale(1.1);
      }

      &--sign-up {
        border: 1px solid $black-color;

        &:hover {
          background-color: $blue-color;
          border: 1px solid $blue-color;
        }
      }
    }
  }
}

